# QWorkNew

./: .gitignore  common.prf  qworknew.pro  ubuntu-build-dep.txt  urls.txt
QWorkNew/: libs.pro
QWorkNew/app/: QWorkIde.qbs  QWorkIde.rc  main.cpp  src.pro
QWorkNew/plugins/: plugins.pro  plugins.qbs
libs/ProjectExplorer/: ConfigureProjectsDialog.cpp  ConfigureProjectsDialog.h  ConfigureProjectsDialog.ui  ProjectManagerPythonModule.cpp  ProjectManagerPythonModule.h  SelectProjectsDialog.cpp  SelectProjectsDialog.h  SelectProjectsDialog.ui  abi.cpp  abi.h  abiwidget.cpp  (+187 more)
qte/: .directory  CMakeLists.txt
qte/examples/py/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qte/libs/: CMakeLists.txt
qte/libs/aggregation/: CMakeLists.txt  aggregate.qbs  aggregation.pro
qte/libs/corelib/: CMakeLists.txt  CloseApplicationHandler.cpp  CommandShortcutsDialog.cpp  CommandShortcutsDialog.h  CommandsTreeModel.cpp  DocumentToolBar.h  HighlighterFormatsConfigureWidget.cpp  IChangeProjectFileWatcher.cpp  IDocument.cpp  IDocument.h  IGuiFactory.cpp  IGuiFactory.h  ILink.cpp  ILink.h  IPythonModule.cpp  ISessionClient.h  ITextDocument.h  LogFilterDialog.cpp  LogFilterDialog.h  LogFilterDialog.ui  LogManager.cpp  LogManager.h  MainToolBar.cpp  MainToolBar.h  ModeManager.cpp  ModeManager.h  OpenEditorsWindow.h  PythonQtObjectStorage.h  SessionManager.cpp  SessionManager.h  SessionsDialog.cpp  SessionsDialog.h  SessionsDialog.ui  WizardManager.cpp  completionassistprovider.h  coreconstants.h  featureprovider.cpp  fileiconprovider.cpp  fileiconprovider.h  futureprogress.h  (+25 more)
qte/libs/corelib/CodeModel/: ICodeModel.h  abstracteditorsupport.cpp  abstracteditorsupport.h
qte/libs/pythoneditorlib/: CMakeLists.txt  pythoneditor.cpp  pythoneditor.h  pythoneditor_global.h  pythoneditorconstants.h  pythoneditorlib.pro  pythoneditorwidget.cpp  pythoneditorwidget.h
qte/libs/pythoneditorlib/tools/: pythonindenter.h
qte/libs/pythoneditorlib/tools/lexical/: pythonscanner.cpp
qte/libs/settings/: CMakeLists.txt  ISettingsClient.cpp  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.h  settings.pro  settings.qbs  settings_global.h
qte/libs/texteditorlib/: CMakeLists.txt  IBaseTextDocument.cpp  IFixOnSaveHandler.h  PlainTextDocumentPlugin.cpp  PlainTextDocumentPlugin.h  PlainTextEditor.cpp  PlainTextEditor.h  TextEditorSettingsWidget.h  TextFormatModel.h  basehoverhandler.cpp  basetextdocumentlayout.h  basetexteditor.cpp  basetexteditor_p.h  basetextfind.h  codestylepool.cpp  colorscheme.cpp  convenience.h  helpitem.cpp  refactoringchanges.h  refactoroverlay.cpp  texteditor.h  texteditorconstants.h  texteditorlib.pro  texteditorlib.qbs  texteditorlib.qrc  texteditoroverlay.cpp  texteditorsettings.h
qte/libs/texteditorlib/codeassist/: basicproposalitem.cpp  basicproposalitemlistmodel.cpp  basicproposalitemlistmodel.h  codeassistant.h  functionhintproposalwidget.cpp  genericproposalwidget.cpp  iassistprocessor.h  iassistproposalmodel.h  keywordscompletionassist.cpp  keywordscompletionassist.h
qte/libs/texteditorlib/generichighlighter/: highlighter.h  manager.cpp
qte/libs/texteditorlib/generichighlighter/config_xml/: cmake.xml
qte/libs/texteditorlib/snippets/: isnippetprovider.h  plaintextsnippetprovider.h  snippeteditor.cpp  snippeteditor.h
qte/libs/texteditorlib/tooltip/: tipcontents.h  tooltip.cpp
qte/libs/utils/: CMakeLists.txt  DesignerDockTitle.cpp  DesignerDockTitle.h  DesignerDockTitle.ui  DiagnosticMessage.cpp  DiagnosticMessage.h  IssuesView.cpp  MemoryPool.cpp  PageFormat.cpp  QwDialog.cpp  QwDockWidget.cpp  QwTableView.cpp  QwTableView.h  RecentFilesMenu.h  StyleManager.cpp  StyleManager.h  ansiescapecodehandler.cpp  buildablehelperlibrary.h  checkablemessagebox.h  classnamevalidatinglineedit.cpp  classnamevalidatinglineedit.h  detailswidget.cpp  detailswidget.h  environmentmodel.cpp  environmentmodel.h  execmenu.cpp  execmenu.h  faketooltip.cpp  faketooltip.h  fancylineedit.cpp  fancylineedit.h  filenamevalidatinglineedit.cpp  filenamevalidatinglineedit.h  filesearch.cpp  filesearch.h  filewizardpage.ui  headerviewstretcher.cpp  historycompleter.cpp  historycompleter.h  linecolumnlabel.h  (+26 more)
qte/libs/utils/qss/: QwTabCornerToolBar.qss  QwTitleBar.qss
qte/libs/utils/theme/: theme.cpp  theme_p.h
sqte/: CMakeLists.txt
sqte/cmake/: FindSIP.cmake
sqte/examples/: CMakeLists.txt
sqte/examples/py/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
sqte/libs/: CMakeLists.txt
sqte/libs/edlib/: CMakeLists.txt  edlib.cpp  edlib.h  edlib_global.h
sqte/libs/pythoneditor/: CMakeLists.txt  pythoneditorlib.qbs  pythoneditorwidget.cpp  pythoneditorwidget.h  pythonhighlighterformatsdata.cpp  pythonhighlighterformatsdata.h
sqte/libs/pythoneditor/tools/: pythonhighlighter.cpp
sqte/libs/pythoneditor/tools/lexical/: sourcecodestream.h
sqte/libs/texteditor/: CMakeLists.txt  basetextdocument.cpp  basetexteditor.h  basetexteditor_p.h  codecselector.cpp  codecselector.h  codestylepool.cpp  convenience.cpp  highlighterformatsconfigurewidget.cpp  highlighterformatsconfigurewidget.h  highlighterformatsconfigurewidget.ui  highlighterformatsmanager.cpp  highlighterformatsmanager.h  id.h  itexteditor.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h  texteditor.cpp  texteditor.h  texteditoroverlay.h  texteditorsettings.cpp
sqte/libs/texteditor/codeassist/: codeassistant.cpp  completionassistprovider.cpp  defaultassistinterface.h  genericproposalwidget.h  iassistinterface.h  iassistproposalitem.h  iassistprovider.h
sqte/libs/texteditor/core/: icontext.h  id.cpp  infobar.h  itexteditor.h  manhattanstyle.cpp  textfile.h
sqte/libs/texteditor/snippets/: snippet.cpp  snippet.h  snippetassistcollector.cpp  snippeteditor.cpp  snippeteditor.h  snippetscollection.h
sqte/libs/texteditor/tooltip/: reuse.h  tipcontents.cpp  tipfactory.cpp
sqte/libs/texteditor/utils/: algorithm.h  consoleprocess_unix.cpp  qtcassert.h  savefile.h  stringutils.cpp  stringutils.h  stylehelper.h  textfileformat.cpp  uncommentselection.cpp  unixutils.cpp  unixutils.h
sqte/sip/: edlib.sip  project.py  pyproject.toml
(+1557 files in other folders)
